[package]
name = "vrc-owo"
version = "0.2.2"
edition = "2024"

[dependencies]
owo-skin-rs = "1.0.0"
vrchat_osc = "1.3.0"
rosc = "0.11.4"
slint = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
slint-build = "1.11.0"
