[package]
name = "vrc-owo"
version = "0.2.2"
edition = "2024"

[dependencies]
owo-skin-rs = "1.0.0"
vrchat_osc = "2.2"
slint = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
slint-build = "1.11.0"
